artwork-k8s/artwork-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: artwork
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: artwork
      version: "v1"
  template:
    metadata:
      labels:
        app: artwork
        version: "v1"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - artwork
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - name: artwork-app
          image: gcr.io/artbridge/artwork
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
          ports:
            - name: http
              containerPort: 8002
#          readinessProbe:
#            httpGet:
#              path: /management/health/readiness
#              port: http
#            initialDelaySeconds: 20
#            periodSeconds: 15
#            failureThreshold: 6
#          livenessProbe:
#            httpGet:
#              path: /management/health/liveness
#              port: http
#            initialDelaySeconds: 120
