artwork-k8s/artwork-mariadb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: artwork-mariadb
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: artwork-mariadb
  template:
    metadata:
      labels:
        app: artwork-mariadb
    spec:
      volumes:
        - name: data
          emptyDir: {}
      containers:
        - name: mariadb
          image: mariadb:10.8.3
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql/
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: artwork-mariadb
  namespace: default
spec:
  selector:
    app: artwork-mariadb
  ports:
    - port: 3306
