artwork-k8s/artwork-service.yml
apiVersion: v1
kind: Service
metadata:
  name: artwork
  namespace: default
  labels:
    app: artwork
spec:
  selector:
    app: artwork
  ports:
    - name: http
      port: 8082
